manifests/svc-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-server
  labels:
    app: server
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  ports:
    - name: http
      targetPort: 5000
      protocol: TCP
      port: 80
  selector:
    app: server
