manifests/ingress-server.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-server
  labels:
    app: server
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: DOMAIN
    http:
      paths:
      - path: api/
        backend:
          serviceName: svc-server
          servicePort: 80
